fixed checkout on firefox

--- a/genericStore.css
+++ b/genericStore.css
@@ -77,6 +77,7 @@ body{
 }
 #items div{
 	width:fit-content;
+	width:-moz-fit-content;
 	border:solid black;
 	background-color:#c9c7c7;
 	border-radius:10px;
