--- a/sassStyles.scss
+++ b/sassStyles.scss
@@ -1,5 +1,9 @@
 @mixin sticky(){
 	position: sticky;
+	position: -moz-sticky;
+	position: -webkit-sticky;
+	position: -ms-sticky;
+	
 	top:0;
 }
 
